# log-hook

./: CMakeLists.txt  Makefile  README.md
src/: hook_format.cpp  hook_format_sniffer.cpp  hook_outputdebugstring.cpp  hook_vsnprintf.cpp  injector.cpp  simple_outputdebugstring_hook.cpp
